# pyair2stream

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  LICENSE  README.md  USER_GUIDE.md  audit_results.md  enhancements_v1.md  final_audit_report.md  patch_build_folds.py  patch_cleanup.py  patch_config.py  patch_docs.py  patch_driver.py  patch_masking.py  patch_model.py  patch_model_numba.py  patch_numba_kge.py  patch_optimization.py  patch_par_restore.py  patch_par_restore2.py  patch_post_processing.py  patch_post_processing_2.py  patch_post_processing_3.py  patch_test.py  patch_test2.py  patch_test_opt.py  patch_test_opt2.py  patch_test_opt3.py  patch_test_opt4.py  patch_tests_final.py  pyair2stream_gap_tolerant_design.docx  pyproject.toml  python_port_feasibility.md  requirements.txt  temp_config.yaml  test_config.yml  test_de.py  test_eval.py  (+4 more)
.github/workflows/: python-app.yml  tests.yml
docs/: DE_mode.md  MCMC_uncertainty.md  cross_validation.md  gap_tolerant.md  sensitivity_analysis.md
examples/Hopelands/: Final_Analysis_Report.md  Hopelands_merged.csv  README.md  WT_Mean_Hopelands.csv  config.yaml  daily_flow_station_id_32504.csv  daily_temperature_station_id_32504.csv  pre_analysis_summary.txt  preprocess.py  run_hopelands_analysis.py  update_report.py
examples/Pukeokahu/: README.md  (+6 more)
pyair2stream/: README.md  USER_GUIDE.md  __init__.py  config.py  cross_validation.py  io.py  main.py  model.py  model_numba.py  optimization.py  post_processing.py  pre_analysis.py  preprocessing.py  sensitivity.py  uncertainty.py
tests/: fortran_runner.py  test_bugfix.py  test_config.py  test_cross_validation.py  test_gap_tolerant.py  test_golden.py  test_io.py  test_main.py  test_model.py  test_optimization.py  test_physics_golden.py  test_post_processing.py  test_pre_analysis.py  test_preprocessing.py  test_sensitivity.py  test_uncertainty.py
(+155 files in other folders)
