[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyair2stream"
version = "1.0.0"
authors = [
    { name="pyair2stream authors", email="author@example.com" },
]
description = "Python port of the air2stream hybrid model for river water temperature."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.2.0",
    "matplotlib>=3.3.0",
    "scipy>=1.6.0",
    "pyyaml>=5.4.0",
    "emcee>=3.0.0",
    "numba>=0.53.0"
]

[project.urls]
"Homepage" = "https://github.com/example/pyair2stream"

[project.scripts]
pyair2stream = "pyair2stream.main:main"

[tool.setuptools.packages.find]
include = ["pyair2stream*"]
exclude = ["examples*", "tests*", "fortran*", "*.md", "*.txt", "*.docx"]
