[tool.poetry]
name = "pyair2stream"
version = "1.0.0"
description = "Python port of the air2stream hybrid model for river water temperature."
authors = ["pyair2stream authors <author@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/example/pyair2stream"
packages = [
    { include = "pyair2stream" }
]
exclude = [
    "examples", "tests", "fortran", "*.md", "*.txt", "*.docx"
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.20.0"
pandas = ">=1.2.0"
matplotlib = ">=3.3.0"
scipy = ">=1.6.0"
pyyaml = ">=5.4.0"
emcee = ">=3.0.0"
numba = ">=0.53.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
pyair2stream = "pyair2stream.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
